--- a/Test.ipynb
+++ b/Test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 518,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 519,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 520,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 521,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 522,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 523,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 524,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +641,7 @@
        "20          59.0        247.0       1308.0         15.0  "
       ]
      },
-     "execution_count": 524,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 525,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 526,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -759,45 +759,45 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Sumner , IL</td>\n",
-       "      <td>9/11/1892</td>\n",
-       "      <td>Illinois</td>\n",
-       "      <td>Retired</td>\n",
-       "      <td>1 Season</td>\n",
-       "      <td>73.0</td>\n",
-       "      <td>Petty, Ross</td>\n",
-       "      <td>rosspetty/2523136</td>\n",
-       "      <td>180.0</td>\n",
-       "      <td>1920 - 1920</td>\n",
+       "      <td>Detroit , MI</td>\n",
+       "      <td>3/31/1992</td>\n",
+       "      <td>Central Michigan</td>\n",
+       "      <td>Active</td>\n",
+       "      <td>3rd season</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>Walton, L.T.</td>\n",
+       "      <td>l.t.walton/2552444</td>\n",
+       "      <td>305.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         Birth Place    Birthday         College Current Status Experience  \\\n",
-       "0  Grand Rapids , MI   5/23/1921      Notre Dame        Retired  3 Seasons   \n",
-       "1        Dayton , OH  12/21/1930          Dayton        Retired   1 Season   \n",
-       "2        Temple , TX   9/11/1960  Louisiana Tech        Retired   1 Season   \n",
-       "3   New Orleans , LA   9/30/1986             LSU        Retired  5 Seasons   \n",
-       "4        Sumner , IL   9/11/1892        Illinois        Retired   1 Season   \n",
+       "         Birth Place    Birthday           College Current Status  Experience  \\\n",
+       "0  Grand Rapids , MI   5/23/1921        Notre Dame        Retired   3 Seasons   \n",
+       "1        Dayton , OH  12/21/1930            Dayton        Retired    1 Season   \n",
+       "2        Temple , TX   9/11/1960    Louisiana Tech        Retired    1 Season   \n",
+       "3   New Orleans , LA   9/30/1986               LSU        Retired   5 Seasons   \n",
+       "4       Detroit , MI   3/31/1992  Central Michigan         Active  3rd season   \n",
        "\n",
        "   Height (inches)            Name            Player_Id  Weight (lbs)  \\\n",
        "0             71.0     Evans, Fred    fredevans/2513736         185.0   \n",
        "1             70.0      Raiff, Jim     jimraiff/2523700         235.0   \n",
        "2             74.0   Fowler, Bobby  bobbyfowler/2514295         230.0   \n",
        "3             73.0  Johnson, Quinn   quinnjohnson/79593         255.0   \n",
-       "4             73.0     Petty, Ross    rosspetty/2523136         180.0   \n",
+       "4             77.0    Walton, L.T.   l.t.walton/2552444         305.0   \n",
        "\n",
        "  Years Played  \n",
        "0  1946 - 1948  \n",
        "1  1954 - 1954  \n",
        "2  1985 - 1985  \n",
        "3  2009 - 2013  \n",
-       "4  1920 - 1920  "
+       "4          NaN  "
       ]
      },
-     "execution_count": 526,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -810,7 +810,7 @@
     "basic_stats.drop('High School', axis=1, inplace=True)\n",
     "basic_stats.drop('Age', axis=1, inplace=True)\n",
     "basic_stats.drop('High School Location', axis=1, inplace=True)\n",
-    "basic_stats.dropna(inplace=True)\n",
+    "#basic_stats.dropna(inplace=True)\n",
     "basic_stats.reset_index(inplace=True)\n",
     "basic_stats.drop('index', axis=1, inplace=True)\n",
     "basic_stats.rename(columns={'Player Id': 'Player_Id'}, inplace=True)\n",
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 527,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 528,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 530,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1101,7 +1101,7 @@
        "      <td>304.0</td>\n",
        "      <td>1049.0</td>\n",
        "      <td>7.0</td>\n",
-       "      <td>jimkelly/2501579\\n5487</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -1246,36 +1246,22 @@
        "10         5        140    1886.0    3762.0   27663.0    173.0          220.0   \n",
        "11        10        211    2830.0    5186.0   40239.0    290.0          253.0   \n",
        "\n",
-       "    Times_Sacked  Rushing_Att  Rushing_Yds  Rushing_Tds  \\\n",
-       "0          260.0        173.0        286.0          3.0   \n",
-       "1          525.0        602.0       1844.0         14.0   \n",
-       "2          259.0        327.0       1016.0          9.0   \n",
-       "3          270.0        301.0         87.0          9.0   \n",
-       "4          358.0        722.0       4239.0         43.0   \n",
-       "5          516.0        774.0       3407.0         33.0   \n",
-       "6          323.0        304.0       1049.0          7.0   \n",
-       "7          319.0        224.0        476.0         13.0   \n",
-       "8          167.0        294.0       1293.0          9.0   \n",
-       "9          274.0        675.0       3674.0         32.0   \n",
-       "10         109.0         71.0        140.0          7.0   \n",
-       "11          74.0        450.0       1777.0         13.0   \n",
-       "\n",
-       "                 Player_Id  \n",
-       "0       kurtwarner/2503540  \n",
-       "1       brettfavre/2500606  \n",
-       "2       troyaikman/2499369  \n",
-       "3        danmarino/2501869  \n",
-       "4       steveyoung/2503843  \n",
-       "5        johnelway/2500547  \n",
-       "6   jimkelly/2501579\\n5487  \n",
-       "7         danfouts/2514293  \n",
-       "8        lendawson/2512662  \n",
-       "9    frantarkenton/2527019  \n",
-       "10       joenamath/2521943  \n",
-       "11    johnnyunitas/2527792  "
+       "    Times_Sacked  Rushing_Att  Rushing_Yds  Rushing_Tds              Player_Id  \n",
+       "0          260.0        173.0        286.0          3.0     kurtwarner/2503540  \n",
+       "1          525.0        602.0       1844.0         14.0     brettfavre/2500606  \n",
+       "2          259.0        327.0       1016.0          9.0     troyaikman/2499369  \n",
+       "3          270.0        301.0         87.0          9.0      danmarino/2501869  \n",
+       "4          358.0        722.0       4239.0         43.0     steveyoung/2503843  \n",
+       "5          516.0        774.0       3407.0         33.0      johnelway/2500547  \n",
+       "6          323.0        304.0       1049.0          7.0                         \n",
+       "7          319.0        224.0        476.0         13.0       danfouts/2514293  \n",
+       "8          167.0        294.0       1293.0          9.0      lendawson/2512662  \n",
+       "9          274.0        675.0       3674.0         32.0  frantarkenton/2527019  \n",
+       "10         109.0         71.0        140.0          7.0      joenamath/2521943  \n",
+       "11          74.0        450.0       1777.0         13.0   johnnyunitas/2527792  "
       ]
      },
-     "execution_count": 530,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1293,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1302,7 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1514,7 +1500,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 349,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1540,7 +1526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 535,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1549,7 +1535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 536,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1559,7 +1545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 537,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -3332,7 +3318,7 @@
        "[3552 rows x 24 columns]"
       ]
      },
-     "execution_count": 537,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3363,7 +3349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 541,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3376,7 +3362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 542,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -3682,7 +3668,7 @@
        "11        450.0       1777.0         13.0    johnnyunitas/2527792  "
       ]
      },
-     "execution_count": 542,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
