--- a/Final_Project_Max.ipynb
+++ b/Final_Project_Max.ipynb
@@ -97,6 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Check if player is a QB\n",
     "def qb_and_rb(pos):\n",
     "    if pos == 'QB':\n",
     "        return pos\n",
@@ -111,6 +112,7 @@
    "outputs": [],
    "source": [
     "hof_data['Pos'] = hof_data['Pos'].apply(lambda x: qb_and_rb(x))\n",
+    "# Remove Unneeded Columns\n",
     "hof_data.drop('Lng.2', axis=1, inplace=True)\n",
     "hof_data.drop('Lng.1', axis=1, inplace=True)\n",
     "hof_data.drop('TD.2', axis=1, inplace=True)\n",
@@ -128,6 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Drop unusable rows and reset\n",
     "hof_data.dropna(inplace=True)\n",
     "hof_data.reset_index(inplace=True)\n",
     "hof_data.drop('index', axis=1, inplace=True)"
@@ -139,6 +142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Rename columns for better understanding\n",
     "hof_data.rename(columns={'AP1': 'First_Team_AP', 'G': 'Num_Games', 'PB': 'Pro_Bowl', 'Cmp': 'Pass_Cmp', 'Att': 'Pass_Att', 'Yds': 'Pass_Yds'}, inplace=True)\n",
     "hof_data.rename(columns={'TD': 'Pass_TD', 'Int': 'Interceptions', 'Sk': 'Times_Sacked', 'Att.1': 'Rushing_Att', 'Yds.2': 'Rushing_Yds', 'TD.1': 'Rushing_Tds',}, inplace=True)"
    ]
@@ -349,129 +353,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Birth Place</th>\n",
-       "      <th>Birthday</th>\n",
-       "      <th>College</th>\n",
-       "      <th>Current Status</th>\n",
-       "      <th>Experience</th>\n",
-       "      <th>Height (inches)</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Player_Id</th>\n",
-       "      <th>Weight (lbs)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Grand Rapids , MI</td>\n",
-       "      <td>5/23/1921</td>\n",
-       "      <td>Notre Dame</td>\n",
-       "      <td>Retired</td>\n",
-       "      <td>3 Seasons</td>\n",
-       "      <td>71.0</td>\n",
-       "      <td>Evans, Fred</td>\n",
-       "      <td>fredevans/2513736</td>\n",
-       "      <td>185.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Dayton , OH</td>\n",
-       "      <td>12/21/1930</td>\n",
-       "      <td>Dayton</td>\n",
-       "      <td>Retired</td>\n",
-       "      <td>1 Season</td>\n",
-       "      <td>70.0</td>\n",
-       "      <td>Raiff, Jim</td>\n",
-       "      <td>jimraiff/2523700</td>\n",
-       "      <td>235.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Temple , TX</td>\n",
-       "      <td>9/11/1960</td>\n",
-       "      <td>Louisiana Tech</td>\n",
-       "      <td>Retired</td>\n",
-       "      <td>1 Season</td>\n",
-       "      <td>74.0</td>\n",
-       "      <td>Fowler, Bobby</td>\n",
-       "      <td>bobbyfowler/2514295</td>\n",
-       "      <td>230.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>New Orleans , LA</td>\n",
-       "      <td>9/30/1986</td>\n",
-       "      <td>LSU</td>\n",
-       "      <td>Retired</td>\n",
-       "      <td>5 Seasons</td>\n",
-       "      <td>73.0</td>\n",
-       "      <td>Johnson, Quinn</td>\n",
-       "      <td>quinnjohnson/79593</td>\n",
-       "      <td>255.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Detroit , MI</td>\n",
-       "      <td>3/31/1992</td>\n",
-       "      <td>Central Michigan</td>\n",
-       "      <td>Active</td>\n",
-       "      <td>3rd season</td>\n",
-       "      <td>77.0</td>\n",
-       "      <td>Walton, L.T.</td>\n",
-       "      <td>l.t.walton/2552444</td>\n",
-       "      <td>305.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         Birth Place    Birthday           College Current Status  Experience  \\\n",
-       "0  Grand Rapids , MI   5/23/1921        Notre Dame        Retired   3 Seasons   \n",
-       "1        Dayton , OH  12/21/1930            Dayton        Retired    1 Season   \n",
-       "2        Temple , TX   9/11/1960    Louisiana Tech        Retired    1 Season   \n",
-       "3   New Orleans , LA   9/30/1986               LSU        Retired   5 Seasons   \n",
-       "4       Detroit , MI   3/31/1992  Central Michigan         Active  3rd season   \n",
-       "\n",
-       "   Height (inches)            Name            Player_Id  Weight (lbs)  \n",
-       "0             71.0     Evans, Fred    fredevans/2513736         185.0  \n",
-       "1             70.0      Raiff, Jim     jimraiff/2523700         235.0  \n",
-       "2             74.0   Fowler, Bobby  bobbyfowler/2514295         230.0  \n",
-       "3             73.0  Johnson, Quinn   quinnjohnson/79593         255.0  \n",
-       "4             77.0    Walton, L.T.   l.t.walton/2552444         305.0  "
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-43e4a1e4d255>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mbasic_stats\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'data/Basic_Stats.csv'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mbasic_stats\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Position'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minplace\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mbasic_stats\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Number'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minplace\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mbasic_stats\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Current Team'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minplace\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mbasic_stats\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'High School'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minplace\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
     }
    ],
    "source": [
     "basic_stats = pd.read_csv('data/Basic_Stats.csv')\n",
+    "# Remove unneeded columns and remove rows with NA\n",
     "basic_stats.drop('Position', axis=1, inplace=True)\n",
     "basic_stats.drop('Number', axis=1, inplace=True)\n",
     "basic_stats.drop('Current Team', axis=1, inplace=True)\n",
@@ -503,6 +402,7 @@
     "not_in = []\n",
     "not_in_index = []\n",
     "i = 0\n",
+    "# Parse player IDs and convert them into universal name variables\n",
     "for item in hof_data['Player']:\n",
     "    name = item.split('\\\\')[0]\n",
     "    name = name.split(' ')\n",
@@ -530,6 +430,7 @@
    "outputs": [],
    "source": [
     "hof_data_with_id = hof_data.drop(2, axis=0)\n",
+    "# Removing Hall of Famers not in Kaggle Dataset\n",
     "hof_data_with_id.drop(4, axis=0, inplace=True)\n",
     "hof_data_with_id.drop(9, axis=0, inplace=True)\n",
     "hof_data_with_id.drop(11, axis=0, inplace=True)\n",
@@ -1000,6 +901,7 @@
     }
    ],
    "source": [
+    "# Drop unnecessary columns and rearrange data for better understanding\n",
     "qb.drop('Position', axis=1, inplace=True)\n",
     "qb.drop('Game Date', axis=1, inplace=True)\n",
     "qb.drop('Games Played', axis=1, inplace=True)\n",
@@ -1265,12 +1167,14 @@
     "master_data = hof_data.copy()\n",
     "master_data.drop(['Pos', \"Indct\", \"From\", 'To', 'Rk', 'First_Team_AP', 'Pro_Bowl'], axis=1, inplace=True)\n",
     "\n",
+    "# Convert playerID to names\n",
     "def convert_id(x):\n",
     "    x = x.split('\\\\')[0]\n",
     "    x = x.split(' ')\n",
     "    x = x[1] + ', ' + x[0]\n",
     "    return x\n",
     "\n",
+    "# Rename columns for better understanding\n",
     "master_data = master_data.rename(columns={\n",
     "    \"Pass_Cmp\": \"Passes Completed\",\n",
     "    \"Pass_Att\": \"Passes Attempted\",\n",
@@ -1487,6 +1391,7 @@
     }
    ],
    "source": [
+    "# Set Hall of Fame status and whether or not they are currently in the NFL\n",
     "master_data['HoF'] = master_data['Player Id'].apply(lambda x: True)\n",
     "master_data = pd.concat([master_data, qb_sum], ignore_index=True, sort=False)\n",
     "master_data.drop_duplicates(subset=['Player Id'], inplace=True, keep='first')\n",
@@ -1528,6 +1433,7 @@
     "    x = x[1].replace('+', '') + ', ' + x[0]\n",
     "    return x\n",
     "\n",
+    "# Convert names to the universal format we are using\n",
     "gwd['Player'] = gwd['Player'].apply(gwd_id_convert)"
    ]
   },
@@ -1782,6 +1688,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Add superbowl wins to master dataframe\n",
     "master_data = pd.merge(master_data, sup_wins, on='Player Id', how='outer')"
    ]
   },
@@ -1968,7 +1875,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "All the data graphed below is filtered to only plot the retired players. This is done because the graphs are meant to try to find differences between the hall of fame players and the rest of the group. If active players are included, players that might be in the hall of fame later will show up as normal players and potentially make the graphs misleading."
@@ -2478,6 +2385,7 @@
     }
    ],
    "source": [
+    "# Create dataframe with only retired players and replace HoF status with binary for ML\n",
     "retired = master_data[master_data[\"Current Status\"] == \"Retired\"].copy()\n",
     "retired['HoF'] = retired['HoF'].apply(lambda x: 0 if not x else 1)\n",
     "retired.dropna(inplace=True)\n",
@@ -2492,6 +2400,8 @@
    "source": [
     "X = retired.drop([\"Player Id\", \"Current Status\", \"HoF\"], axis=1)\n",
     "y = retired['HoF']\n",
+    "\n",
+    "# Split data into training and testing data\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=42)\n",
     "clf = svm.SVC(gamma='auto').fit(X_train, y_train)"
    ]
@@ -2632,6 +2542,8 @@
    "source": [
     "X = filtered_data.drop([\"HoF\"], axis=1)\n",
     "y = filtered_data['HoF']\n",
+    "\n",
+    "# Split data into training and testing data\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=42)\n",
     "clf = svm.SVC(gamma='auto').fit(X_train, y_train)"
    ]
@@ -2708,6 +2620,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Formulas to create the QBR for each player\n",
     "def clamp(x, min_n, max_n):\n",
     "    return min(max(x, min_n), max_n)\n",
     "\n",
@@ -3008,6 +2921,8 @@
    "source": [
     "X = retired.drop([\"HoF\"], axis=1)\n",
     "y = retired['HoF']\n",
+    "\n",
+    "# Split data into training and testing data\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=42)\n",
     "qbr_model = svm.SVC(gamma='auto').fit(X_train, y_train)"
    ]
@@ -3434,7 +3349,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Predicting the members of the hall of fame is much different than how we originally thought it would be. We originally assumed that there would be a higher correlation in game statistics such as sacks, rushing yards, and passing yards. However, becoming a member of the Hall of Fame correlates more with important moments and important individual games. Many members of the Hall of Fame usually have a high number of game winning drives and superbowl wins because those are qualities that make popular players. As we saw from analyzing the data in the graphs, there was much higher correlation with players having a high number of superbowl wins and game winning drives than the other data.\n",
+    "\n",
+    "Although we are confident with some of the predictions above, there are still a lot of features that can contribute to entering the Hall of Fame that we haven't looked at yet. We were able to make these predictions by combining data from a Kaggle dataset and an online public database, but we believe there are more factors such as the number of MVPs a player receives in their career. Hopefully we were able to introduce the data behind f"
+   ]
   }
  ],
  "metadata": {
